Fix Java9+ deprecation for new in primitive counterparts.